--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "ownerNumber": ["6285921165857@s.whatsapp.net"],
+  "ownerNumber": ["6281288779173@s.whatsapp.net", "6281296955567@s.whatsapp.net"],
   "ownerName": ["Lich King"],
   "botName": "Lich MD",
   "hitokey": "HitomiMd",
@@ -7,7 +7,7 @@
   "web": "https://github.com/ayam196",
   "donasiQris": "https://i.ibb.co/f2h3MDQ/Qris.jpg",
   "donasiPulsa": "0858-9291-0131",
-  "sb": "»⟩",
+  "sb": ">]",
   "footer": "© LICH MD 2022",
   "fake": "LICH MULTI DEVICE",
   "sessionName": "hitomi",
